# zcash

./: .clang-tidy  .dir-locals.el  .editorconfig  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  404.html  AUDIT_BATCH_0_REPORT.md  AUDIT_MANIFEST.txt  AUDIT_PROGRESS.md  AUDIT_PROGRESS_SUMMARY.md  AUTH_KEY.json.enc  Brewfile  CONTRIBUTING.md  COPYING  Cargo.toml  Dio.ros  Dios.ros  Dockerfile  Dockerfile.release  INSTALL  ISSUE_TEMPLATE.md  Makefile.am  Makefile.am.patch  README-mac.md  README.ZCash.md  README.md  README.rst  README_es.md  SECURITY.md  SECURITY_AUDIT_FINDINGS.md  VFN-001.md  WORKSPACE  allocatememory.c  allocatememory.cpp  autogen.sh  boost.mk.patch  build.sh  (+65 more)
contrib/metrics/: README.md  docker-compose.yml  prometheus.yaml  pyproject.toml
src/: .clang-format  BUILD  KMD.batch0  KMD.batch0.listunspent  KMD.batch0.txids  KMD.batch1  KMD.batch1.txids  KMD.batch2  KMD.batch2.txids  KMD.batch3  KMD.batch3.utxo  KMD.batch4  KMD.batch4.txids  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.gtest.include  Makefile.ktest.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.sodatoken.include  Makefile.test.include  Makefile.zcash.include  REVS.batch0  REVS.batch1  REVS.batch1.txids  REVS.batch2  REVS.batch2.txids  REVS.batch3  REVS.batch3.txids  REVS.batch4  REVS.batchtxids0  REVS.raw  REVS.rawtxids  REVS.snapshot  REVS.txids  REVS.txids0  VRSC_7776  ac.json  (+327 more)
src/ac/: beer  bet  bots  btch  ccl  ceal  chain  commod  coquicash  crypto  dex  dsec  etomic  gleec  hodl  iln  kmdice  koin  kv  mesh  mnz  mshark  oot  our  pangea  thc  vote2019  wlc  wlc21  zexo
src/amqp/: amqpabstractnotifier.cpp  amqpabstractnotifier.h  amqpconfig.h  amqpnotificationinterface.cpp  amqpnotificationinterface.h  amqppublishnotifier.cpp  amqppublishnotifier.h  amqpsender.h
src/bench/: Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  checkqueue.cpp  crypto_hash.cpp  lockedpool.cpp  merkle_root.cpp  perf.cpp  perf.h  prevector_destructor.cpp  rollingbloom.cpp  verification.cpp
src/cc/: CC made easy  CC made easy.md  CCChannels.h  CCGateways.h  CCHeir.h  CCImportGateway.h  CCKogs.h  CCMarmara.h  CCMofN.h  CCOracles.h  CCPayments.h  CCPegs.h  CCPrices.h  CCTriggers.h  CCassets.h  CCassetsCore.cpp  CCassetstx.cpp  CCauction.h  CCchannels.h  CCcustom.cpp  CCcustom.inc  CCdice.h  CCfaucet.h  CCfsm.h  CCinclude.h  CClotto.h  CCponzi.h  CCrewards.h  CCtokens.cpp  CCtokens.h  CCtokensOpRet.cpp  CCtokenutils.cpp  CCtx.cpp  CCutilbits.cpp  CCutils.cpp  CCvalidation.cpp  COptCCParams.cpp  CoinbaseGuard.cpp  CoinbaseGuard.h  Makefile  (+61 more)
src/compat/: BUILD  byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: BUILD
src/consensus/: BUILD  consensus.h  funding.cpp  funding.h  merkle.cpp  merkle.h  params.cpp  params.h  parse_error.h  upgrades.cpp  upgrades.h  validation.h
src/crc32c/: .appveyor.yml
src/crypto/: BUILD  NoteEncryption.cpp  NoteEncryption.hpp  aes.cpp  aes.h  bort.cpp  bort.hpp  chacha20.cpp  chacha20.h  common.h  equihash.cpp  equihash.h  equihash.tcc  haraka.c  haraka.h  haraka_portable.c  haraka_portable.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  prf.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_shani.cpp  sha256_sse4.cpp  sha512.cpp  sha512.h  verus_hash.cpp  verus_hash.h
src/cryptoconditions/: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile.am  README.md  configure.ac  cryptoconditions.py  test-requirements.txt
src/dwcash/: Address.hpp  CreateJoinSplit.cpp  DeepWebCash.h  GenerateParams.cpp  IncrementalMerkleTree.cpp  IncrementalMerkleTree.hpp  JoinSplit.cpp  JoinSplit.hpp  Note.cpp  Note.hpp  NoteEncryption.hpp  Proof.cpp  Proof.hpp
src/fiat/: _usd  aud  axo  bet  bgn  bntn  bots  brl  cad  chf  cny  coqui  crypto  czk  dex  dion  dkk  eql  eur  gbp  glxt  hkd  hodl  hrk  huf  hush  idr  ilien  ils  inr  jpy  jumblr  k64  krw  ksb  kv  mgnx  mgw  morty  mvp  (+36 more)
src/gtest/: BUILD  json_test_vectors.cpp  json_test_vectors.h  main.cpp  test_allocator.cpp  test_block.cpp  test_checkblock.cpp  test_checktransaction.cpp  test_circuit.cpp  test_coins.cpp  test_consensus.cpp  test_deprecation.cpp  test_docbuilder.cpp  test_dynamicusage.cpp  test_equihash.cpp  test_feature_flagging.cpp  test_foundersreward.cpp  test_history.cpp  test_httprpc.cpp  test_joinsplit.cpp  test_jsonspirit.cpp  test_keys.cpp  test_keystore.cpp  test_libdwcash_utils.cpp  test_libsnark.cpp  test_libzcash_utils.cpp  test_mempool.cpp  test_mempoollimit.cpp  test_merkletree.cpp  test_metrics.cpp  test_miner.cpp  test_noteencryption.cpp  test_paymentdisclosure.cpp  test_pedersen_hash.cpp  test_pow.cpp  test_proofs.cpp  test_random.cpp  test_rpc.cpp  test_sapling_note.cpp  test_sighash.cpp  (+18 more)
src/json/: json_spirit_reader_template.h  json_spirit_value.h
src/leveldb/: BUILD  CONTRIBUTING.md  Makefile  README.md  build_detect_platform
src/libgpusolver/: blake.cpp  blake.h  cl.hpp  cl_gpuminer.cpp  cl_gpuminer.h  gpuconfig.h  libclwrapper.cpp  libclwrapper.h  libgpusolver.cpp  libgpusolver.h  libkernel.cpp  libkernel.h  param.h
src/libstratum/: StratumClient.cpp  StratumClient.h  ZcashStratum.cpp  ZcashStratum.h
src/libzerocash/: .gitignore  AUTHORS  Address.cpp  Address.h  Coin.cpp  Coin.h  CoinCommitment.cpp  CoinCommitment.h  GenerateParamsForFiles.cpp  IncrementalMerkleTree.cpp  IncrementalMerkleTree.h  Makefile  MerkleTree.cpp  MerkleTree.h  MintTransaction.cpp  MintTransaction.h  Node.cpp  Node.h  PourTransaction.cpp  PourTransaction.h  Zerocash.h  ZerocashParams.cpp  ZerocashParams.h  get-libsnark
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h
src/primitives/: BUILD  block.cpp  block.h  nonce.cpp  nonce.h  orchard.h  sapling.h  transaction.cpp  transaction.h  tx_version_info.cpp
src/qt/: Makefile  bitcoin.cpp  bitcoingui.cpp  bitcoinstrings.cpp  clientmodel.cpp  coincontroldialog.cpp  guiconstants.h  guiutil.cpp  intro.cpp  macnotificationhandler.mm  rpcconsole.cpp  transactiondesc.cpp  (+3 more)
(+2526 files in other folders)
