[package]
name = "librustzcash"
description = "Rust FFI used by the zcashd binary. Not an official API."
version = "0.2.0"
authors = [
    "Sean Bowe",
    "Jay Graber",
    "Jack Grigg <jack@electriccoin.co>",
    "Daira-Emma Hopwood <daira@jacaranda.org>",
    "Yasser <yasser@electriccoin.co>",
    "Ying Tong Lai",
    "Simon Liu",
    "Kris Nuttycombe <kris@electriccoin.co>",
    "Greg Pfeil",
    "Larry Ruane <larry@electriccoin.co>",
    "Steven Smith",
]
homepage = "https://github.com/zcash/zcash"
repository = "https://github.com/zcash/zcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.96"

[package.metadata.vet]
store = { path = "./qa/supply-chain" }

[lib]
name = "rustzcash"
path = "src/rust/src/lib.rs"
crate-type = ["staticlib"]

[[bin]]
name = "zcashd-wallet-tool"
path = "src/rust/bin/wallet_tool.rs"

[dependencies]
bellman = "0.14"
bip0039 = { version = "0.12", features = ["std", "all-languages"] }
blake2b_simd = "1"
blake2s_simd = "1"
bls12_381 = "0.8"
bridgetree = "0.7"
byteorder = "1"
crossbeam-channel = "0.5"
getrandom = "0.3"
group = "0.13"
hex = "0.4"
incrementalmerkletree = "0.8"
libc = "0.2"
jubjub = "0.10"
memuse = "0.2"
nonempty = "0.11"
orchard = "0.13"
pasta_curves = "0.5"
sapling = { package = "sapling-crypto", version = "0.7", features = ["temporary-zcashd"] }
secp256k1 = "0.29"
subtle = "2.2"
rand_core = "0.6"
redjubjub = "0.8"
tracing = "0.1"
tracing-core = "0.1"
tracing-appender = "0.2"
transparent = { package = "zcash_transparent", version = "0.7" }
zcash_address = "0.11"
zcash_encoding = "0.4"
zcash_history = "0.4"
zcash_note_encryption = "0.4"
zcash_primitives = { version = "0.27", features = ["temporary-zcashd", "transparent-inputs"] }
zcash_proofs = { version = "0.27", features = ["directories"] }
zcash_protocol = { version = "0.8", features = ["local-consensus"] }
ed25519-zebra = "4"
zeroize = "1.4.2"
zip32 = "0.2"
wagyu-zcash-parameters = "0.2"

# Rust/C++ interop
# The version needs to match depends/packages/native_cxxbridge.mk
cxx = { version = "=1.0.194", features = ["c++17"] }

# Rust threading
rayon = "1.5"

# Metrics
ipnet = "2"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
metrics-util = { version = "0.15", default-features = false, features = ["layer-filter"] }
tokio = { version = "1", features = ["rt", "net", "time"] }

# General tool dependencies
gumdrop = "0.8"

# Wallet tool
# (also depends on tracing, and tracing-subscriber with "env-filter" and "fmt" features)
anyhow = "1.0"
backtrace = "0.3"
clearscreen = "4"
rand = "0.8"
secrecy = "0.8"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }

# Macros
macro_find_and_replace = "1"

[dev-dependencies]
incrementalmerkletree = { version = "0.8", features = ["test-dependencies"] }
proptest = "1.0.0"
zcash_primitives = { version = "0.27", features = ["temporary-zcashd", "transparent-inputs", "test-dependencies"] }

[dependencies.tracing-subscriber]
version = "0.3.20"
default-features = false
features = ["ansi", "env-filter", "fmt", "time"]

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1

# TEMPORARY: patch the security-fix crates to their unreleased revisions, for building and
# testing the NU6.2 changes before the orchard / halo2 / librustzcash releases are published.
# Drop these once the crates are released.
[patch.crates-io]
orchard = { git = "https://github.com/zodl-inc/orchard-security-fixes.git", rev = "549bd5bb89e0b583a734c164f40cbfd40ea1fd18" }
halo2_gadgets = { package = "halo2_gadgets", git = "https://github.com/zodl-inc/halo2-security-fixes.git", rev = "a101adb907869062593242a1946a7d6157d11899" }
halo2_proofs = { package = "halo2_proofs", git = "https://github.com/zodl-inc/halo2-security-fixes.git", rev = "a101adb907869062593242a1946a7d6157d11899" }
poseidon = { package = "halo2_poseidon", git = "https://github.com/zodl-inc/halo2-security-fixes.git", rev = "a101adb907869062593242a1946a7d6157d11899" }
zcash_address = { git = "https://github.com/zodl-inc/librustzcash-security-fixes.git", rev = "f953cfe592f323818cfebb5fd1c78211ff68ea30" }
zcash_encoding = { git = "https://github.com/zodl-inc/librustzcash-security-fixes.git", rev = "f953cfe592f323818cfebb5fd1c78211ff68ea30" }
zcash_history = { git = "https://github.com/zodl-inc/librustzcash-security-fixes.git", rev = "f953cfe592f323818cfebb5fd1c78211ff68ea30" }
zcash_primitives = { git = "https://github.com/zodl-inc/librustzcash-security-fixes.git", rev = "f953cfe592f323818cfebb5fd1c78211ff68ea30" }
zcash_proofs = { git = "https://github.com/zodl-inc/librustzcash-security-fixes.git", rev = "f953cfe592f323818cfebb5fd1c78211ff68ea30" }
zcash_protocol = { git = "https://github.com/zodl-inc/librustzcash-security-fixes.git", rev = "f953cfe592f323818cfebb5fd1c78211ff68ea30" }
transparent = { package = "zcash_transparent", git = "https://github.com/zodl-inc/librustzcash-security-fixes.git", rev = "f953cfe592f323818cfebb5fd1c78211ff68ea30" }
